[gd_scene format=3 uid="uid://cucman7n6yw2"]

[ext_resource type="Script" uid="uid://mxt5kes1olcg" path="res://interactables/objectives/objective.gd" id="1_ol0i6"]
[ext_resource type="PackedScene" uid="uid://c5i6hcppggc82" path="res://interactables/interact_component.tscn" id="2_t0dyp"]
[ext_resource type="PackedScene" uid="uid://bc6i8sitd2efm" path="res://assets/level_models/Door.glb" id="3_ol0i6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ol0i6"]
radius = 0.8598633
height = 2.4511719

[node name="ExitObjective" type="Node3D" unique_id=225475714 groups=["ObjectiveGroup"]]
script = ExtResource("1_ol0i6")
tier = 2
heal_amount = 20
objective_description = "Time to leave!"

[node name="Door2" parent="." unique_id=1660966390 instance=ExtResource("3_ol0i6")]
transform = Transform3D(0.95992273, 0, 0.28026468, 0, 1, 0, -0.28026468, 0, 0.95992273, -0.08397555, -1.3091699, 1.0728526)

[node name="InteractComponent" parent="." unique_id=492599483 instance=ExtResource("2_t0dyp")]

[node name="CollisionShape3D" parent="InteractComponent" index="0" unique_id=1152483864]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.001953125, 0)
shape = SubResource("CapsuleShape3D_ol0i6")

[node name="MeshInstance3D" parent="InteractComponent" index="1" unique_id=505492712]
visible = false

[editable path="InteractComponent"]
